--- a/Wednesday_Blank_Thieves_rev.ipynb
+++ b/Wednesday_Blank_Thieves_rev.ipynb
@@ -68,7 +68,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#two ways declare empty dict.\n",
+    "\n",
+    "new_dict = {}\n",
+    "\n",
+    "print(type)(new_dict)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +88,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(user[username])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,6 +112,13 @@
     "    'make': 'Chevrolet',\n",
     "    'model': 'Silverado'\n",
     "}\n",
+    "\n",
+    "\n",
+    "print (truck['year'] \n",
+    "#ETc see phone pic--------------\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -215,9 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max: blue\n",
+      "Lilly: brown\n",
+      "Barney: blue\n",
+      "Larney: brown\n",
+      "Ted: purple\n"
+     ]
+    }
+   ],
    "source": [
     "# use the dict below\n",
     "\n",
@@ -227,7 +254,24 @@
     "    'Barney': 'blue',\n",
     "    'Larney': 'brown',\n",
     "    'Ted': 'purple'\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "def print_dict_items(dictionary):\n",
+    "    #\n",
+    "    for key, value in dictionary.items():\n",
+    "        #\n",
+    "        print(\"{}: {}\".format(key, value))\n",
+    "\n",
+    "people = {\n",
+    "    'Max': 'blue',\n",
+    "    'Lilly': 'brown',\n",
+    "    'Barney': 'blue',\n",
+    "    'Larney': 'brown',\n",
+    "    'Ted': 'purple'\n",
+    "}\n",
+    "print_dict_items(people)\n",
+    "\n",
+    "#see other solution camera pic-------------------\n"
    ]
   },
   {
@@ -239,13 +283,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Barney', 'Larney', 'Lilly', 'Max', 'Ted']\n"
+     ]
+    }
+   ],
    "source": [
     "# sorts variables in order\n",
     "# sorted(dict.values()) or dict.keys() or dict.items()\n",
-    "\n"
+    "\n",
+    "new_people = sorted(people)\n",
+    "\n",
+    "print(new_people)\n"
    ]
   },
   {
@@ -345,7 +400,7 @@
     "    pass\n",
     "end_time = time.time() - start_time\n",
     "\n",
-    "print('Elapsed time for dictionary: {}'.format(end_time))\n",
+    "print('Elapsed time for list: {}'.format(end_time))\n",
     "\n",
     "\n",
     "# tracking time for dictionary\n",
@@ -383,7 +438,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write a function that takes in information and stores it in a dictionary:\n",
+    "\n",
+    "\n",
+    "def address_book():\n",
+    "    # write a function that takes in information and stores it in a dictionary\n",
+    "\n",
+    "    book = {}\n",
+    "    # define an empty dictionary to work with\n",
+    "\n",
+    "    while True:\n",
+    "        # create our loop, which asks the user for information until they quit\n",
+    "\n",
+    "        name = input(\"Enter a name (or 'quit' to exit): \")\n",
+    "        # ask for the information, and store it into variables<\n",
+    "\n",
+    "        if name == 'quit':\n",
+    "            break\n",
+    " #check if the user types quit\n",
+    "\n",
+    "        # ask the user for an address and store it in the 'address' variable\n",
+    "        address = input(\"Enter an address: \")\n",
+    "        # store the name and address in the dictionary\n",
+    "        book[name] = address\n",
+    "    # print the dictionary with the names and addresses\n",
+    "    print(book)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -406,7 +487,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set() or {}\n"
+    "# set() or {}\n",
+    "\n",
+    "set_1 = set()\n",
+    "\n",
+    "set_2 = {1,2,3,4}\n",
+    "\n",
+    "\n"
    ]
   },
   {
