openinf save commit

--- a/Wednesday_Blank_Thieves_rev.ipynb
+++ b/Wednesday_Blank_Thieves_rev.ipynb
@@ -505,11 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set.add()\n"
+    "# set.add()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -545,7 +548,9 @@
    "outputs": [],
    "source": [
     "# Returns a union of two sets, can also use '|' or set.union(set)\n",
-    "# joins all numbers, gets rid of duplicates\n"
+    "# joins all numbers, gets rid of duplicates\n",
+    "\n",
+    "\n"
    ]
   },
   {
