HW review and commit 12 noon

--- a/Wednesday_Blank_Thieves_rev.ipynb
+++ b/Wednesday_Blank_Thieves_rev.ipynb
@@ -441,6 +441,7 @@
    "source": [
     "# write a function that takes in information and stores it in a dictionary:\n",
     "\n",
+    "#GABE TEST ENVIRONMENT_______________________________________________\n",
     "\n",
     "def address_book():\n",
     "    # write a function that takes in information and stores it in a dictionary\n",
@@ -717,7 +718,7 @@
     "3) The User can add or delete items <br>\n",
     "4) The User can see current shopping list <br>\n",
     "5) The program Loops until user 'quits' <br>\n",
-    "6) Upon quiting the program, print out all items in the user's list <br>\n",
+    "6) Upon quitting the program, print out all items in the user's list <br>\n",
     "</p>"
    ]
   },
