--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -588,6 +588,12 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"   GABE class exercise learn and test---------------------------------------------------------------\n",
+    "\n",
+    "\n",
     "def get_info():\n",
     "\n",
     "    info = {}\n",
@@ -614,7 +620,11 @@
     "    \n",
     "    return info\n",
     "\n",
-    "print(get_info())"
+    "print(get_info())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -1065,7 +1075,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n"
+    "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n",
+    "\n",
+    "# PER DK PREFERENCE: use a dictionary for this\n",
+    "\n",
+    "#MUST DO:\n",
+    "\"\"\"   \n",
+    "\n",
+    "[ x ]    1) Takes in input \n",
+    "2) Stores user input into a dictionary or list \n",
+    "3) The User can add or delete items \n",
+    "4) The User can see current shopping list \n",
+    "5) The program Loops until user 'quits' \n",
+    "6) Upon quiting the program, print out all items in the user's list \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
