initisl build "user input section" of CART

--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -1079,6 +1079,8 @@
     "\n",
     "# PER DK PREFERENCE: use a dictionary for this\n",
     "\n",
+    "# ----------->SEE CLASS EXERCISE #3 ABOVE---------------------\n",
+    "\n",
     "#MUST DO:\n",
     "\"\"\"   \n",
     "\n",
@@ -1090,6 +1092,31 @@
     "6) Upon quiting the program, print out all items in the user's list \n",
     "\n",
     "\"\"\"\n",
+    "\n",
+    "shopping_cart = {}\n",
+    "# \"INITIALIZE\" empty dict to store shopping cart item\n",
+    "\n",
+    "def shopping_cart_manager():\n",
+    "    while TRUE:     #INDENT?\n",
+    "# from google search: IMPORTANT FIRST STEP: (a) DEFINE a function to handle user input\n",
+    "# AND (b) UPDATE the shopping cart\n",
+    "\n",
+    "    user_input = input(\"Do you want to: Show/Add/Delete or Quit? \")\n",
+    "    # asks the user what they want to do and stores their response inside user_input\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#user input section---------\n",
+    "\n",
+    "if user_input.answer() == \"show\":\n",
+    "    #checks if user wants to show the current cart\n",
+    "    print(\"Current Cart: \")\n",
+    "    # prints a header for the current cart\n",
+    "    for item, quantity in shopping_cart.itemsd():\n",
+    "    # loops thru each item in the cart and prints NAME and QUANTITY\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "\n",
