commit pre-final CART hw

--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -1109,13 +1109,73 @@
     "\n",
     "#user input section---------\n",
     "\n",
-    "if user_input.answer() == \"show\":\n",
+    "if user_input.decision() == \"show\":\n",
     "    #checks if user wants to show the current cart\n",
     "    print(\"Current Cart: \")\n",
     "    # prints a header for the current cart\n",
     "    for item, quantity in shopping_cart.itemsd():\n",
     "    # loops thru each item in the cart and prints NAME and QUANTITY\n",
-    "    \n",
+    "        print(item + \" - \" + str(quantity))q\n",
+    "        #prints name AND uantity of each item in cart\n",
+    "\n",
+    "#extra space helps gabe to read------------------------------\n",
+    "elif user_input.decision() == \"add\":\n",
+    "# checks if the user wants to add an item to cart\n",
+    "    item_name = input(\"What item do you want to add? \")\n",
+    "    #asks user what item they want to add AND store response inside \"item_name\"\n",
+    "    item_quantity = int(input(\"How many do you want to add? \"))\n",
+    "    # asks user how many of item want to add AND stores inside \"item_quantity\" \n",
+    "    if item_name in shopping_cart:\n",
+    "        #check if item already in cart\n",
+    "        shopping_cart[item_name] += item_quantity\n",
+    "        #adds NEW quantity to EXISTING quantity *IF* the item already in cart\n",
+    "    else:\n",
+    "    #runs if the item is not already in the cart\n",
+    "        shopping_cart[item_name] = item_quantity\n",
+    "        #adds a new item to the \"shopping_cart dictionary\"\n",
+    "    print(item_name + \" added to shopping cart.\")\n",
+    "    #prints message to the user that their chosen \"item_name\" was added to cart\n",
+    "\n",
+    "#extra space helps gabe to read------------------------------\n",
+    "\n",
+    "elif user_input.lower() == \"delete\":\n",
+    "            item_name = input(\"What item do you want to delete? \")\n",
+    "            if item_name in shopping_cart:\n",
+    "                del shopping_cart[item_name]\n",
+    "                print(item_name + \" removed from shopping cart.\")\n",
+    "            else:\n",
+    "                print(item_name + \" not found in shopping cart.\")\n",
+    "\n",
+    "#extra space helps gabe to read------------------------------\n",
+    "\n",
+    "elif user_input.lower() == \"quit\":\n",
+    "            print(\"Final Shopping List: \")\n",
+    "            for item, quantity in shopping_cart.items():\n",
+    "                print(item + \" - \" + str(quantity))\n",
+    "\n",
+    "                break\n",
+    "                #exits the while loop that runs the shopping cart when the user enters \"quit\" \n",
+    "            else:\n",
+    "                print(\"Invalid input, please try again.\")\n",
+    "\n",
+    "\n",
+    "shopping_cart_manager()\n",
+    "# Call the shopping cart function to start the program\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
