--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -1071,25 +1071,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'user_input' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 33\u001b[0m\n\u001b[1;32m     27\u001b[0m         user_input \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDo you want to: Show/Add/Delete or Quit? \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# asks the user what they want to do and stores their response inside user_input\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \n\u001b[1;32m     30\u001b[0m \n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m#user input section---------BELOW\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43muser_input\u001b[49m\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshow\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m#checks if user wants to show the current cart\u001b[39;00m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCurrent Cart: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;66;03m# prints a header for the current cart\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'user_input' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n",
     "\n",
-    "# PER DK PREFERENCE: use a dictionary for this\n",
+    "# PER DK PREFERENCE: use a dictionary for this***************\n",
     "\n",
     "# ----------->SEE CLASS EXERCISE #3 ABOVE---------------------\n",
     "\n",
     "#MUST DO:\n",
     "\"\"\"   \n",
     "\n",
-    "[ x ]    1) Takes in input \n",
-    "2) Stores user input into a dictionary or list \n",
-    "3) The User can add or delete items \n",
-    "4) The User can see current shopping list \n",
-    "5) The program Loops until user 'quits' \n",
-    "6) Upon quiting the program, print out all items in the user's list \n",
+    "[ x ]   1) Takes in input \n",
+    "[ x ]   2) Stores user input into a dictionary or list \n",
+    "[ x ]   3) The User can add or delete items \n",
+    "[ x ]   4) The User can see current shopping list \n",
+    "[ x ]   5) The program Loops until user 'quits' \n",
+    "[ x ]   6) Upon quiting the program, print out all items in the user's list \n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -1097,29 +1109,27 @@
     "# \"INITIALIZE\" empty dict to store shopping cart item\n",
     "\n",
     "def shopping_cart_manager():\n",
-    "    while TRUE:     #INDENT?\n",
+    "    while True:     #INDENT?\n",
     "# from google search: IMPORTANT FIRST STEP: (a) DEFINE a function to handle user input\n",
     "# AND (b) UPDATE the shopping cart\n",
     "\n",
-    "    user_input = input(\"Do you want to: Show/Add/Delete or Quit? \")\n",
+    "        user_input = input(\"Do you want to: Show/Add/Delete or Quit? \")\n",
     "    # asks the user what they want to do and stores their response inside user_input\n",
     "\n",
     "\n",
+    "#user input section---------BELOW\n",
     "\n",
-    "\n",
-    "#user input section---------\n",
-    "\n",
-    "if user_input.decision() == \"show\":\n",
+    "if user_input.lower() == \"show\":\n",
     "    #checks if user wants to show the current cart\n",
     "    print(\"Current Cart: \")\n",
     "    # prints a header for the current cart\n",
     "    for item, quantity in shopping_cart.itemsd():\n",
     "    # loops thru each item in the cart and prints NAME and QUANTITY\n",
-    "        print(item + \" - \" + str(quantity))q\n",
+    "        print(item + \" - \" + str(quantity))\n",
     "        #prints name AND uantity of each item in cart\n",
     "\n",
     "#extra space helps gabe to read------------------------------\n",
-    "elif user_input.decision() == \"add\":\n",
+    "elif user_input.lower() == \"add\":\n",
     "# checks if the user wants to add an item to cart\n",
     "    item_name = input(\"What item do you want to add? \")\n",
     "    #asks user what item they want to add AND store response inside \"item_name\"\n",
@@ -1159,8 +1169,11 @@
     "                print(\"Invalid input, please try again.\")\n",
     "\n",
     "\n",
+    "#user input section---------ABOVE\n",
+    "\n",
     "shopping_cart_manager()\n",
     "# Call the shopping cart function to start the program\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -1207,7 +1220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1221,11 +1234,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "aa82987a71ca0339a52998cd22613b0c002bda8349fa32a0cb67ceec3936a2bf"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
