first am commit: SAVING?

--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -1071,22 +1071,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'user_input' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 33\u001b[0m\n\u001b[1;32m     27\u001b[0m         user_input \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDo you want to: Show/Add/Delete or Quit? \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;66;03m# asks the user what they want to do and stores their response inside user_input\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \n\u001b[1;32m     30\u001b[0m \n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m#user input section---------BELOW\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43muser_input\u001b[49m\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshow\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;66;03m#checks if user wants to show the current cart\u001b[39;00m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCurrent Cart: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;66;03m# prints a header for the current cart\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'user_input' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#####################VVVVVVVVVVVVVVVVVVVVVV----------- VERSION #2 PER C.ASKEW ------------VVVVVVVVVVVVVVVVV###############################################\n",
+    "\n",
     "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n",
     "\n",
     "# PER DK PREFERENCE: use a dictionary for this***************\n",
@@ -1102,6 +1092,111 @@
     "[ x ]   4) The User can see current shopping list \n",
     "[ x ]   5) The program Loops until user 'quits' \n",
     "[ x ]   6) Upon quiting the program, print out all items in the user's list \n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# Initialize an empty dictionary to store the shopping cart items\n",
+    "shopping_cart = {}\n",
+    "\n",
+    "# Define a function to handle user input and update the shopping cart\n",
+    "def shopping_cart_manager():\n",
+    "    while True:\n",
+    "        # Ask the user what they want to do\n",
+    "        user_input = input(\"Do you want to: Show/Add/Delete or Quit? \")\n",
+    "\n",
+    "        # Handle user input\n",
+    "        if user_input.lower() == \"show\":\n",
+    "            print(\"Current Shopping List: \")\n",
+    "            for item, quantity in shopping_cart.items():\n",
+    "                print(item + \" - \" + str(quantity))\n",
+    "        elif user_input.lower() == \"add\":\n",
+    "            item_name = input(\"What item do you want to add? \")\n",
+    "            item_quantity = int(input(\"How many do you want to add? \"))\n",
+    "            if item_name in shopping_cart:\n",
+    "                shopping_cart[item_name] += item_quantity\n",
+    "            else:\n",
+    "                shopping_cart[item_name] = item_quantity\n",
+    "            print(item_name + \" added to shopping cart.\")\n",
+    "        elif user_input.lower() == \"delete\":\n",
+    "            item_name = input(\"What item do you want to delete? \")\n",
+    "            if item_name in shopping_cart:\n",
+    "                del shopping_cart[item_name]\n",
+    "                print(item_name + \" removed from shopping cart.\")\n",
+    "            else:\n",
+    "                print(item_name + \" not found in shopping cart.\")\n",
+    "        elif user_input.lower() == \"quit\":\n",
+    "            print(\"Final Shopping List: \")\n",
+    "            for item, quantity in shopping_cart.items():\n",
+    "                print(item + \" - \" + str(quantity))\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid input, please try again.\")\n",
+    "\n",
+    "# Call the shopping cart manager function to start the program\n",
+    "shopping_cart_manager()\n",
+    "\n",
+    "\n",
+    "\n",
+    "##################### ^^^^^^^^^^^^^^^^^^--------------VERSION #2 PER C.ASKEW--------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ###############################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\"\"\n",
+    "\n",
+    "\n",
+    "#############VERSION #1 -------FIX PER C.ASKEW-----------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n",
+    "\n",
+    "# PER DK PREFERENCE: use a dictionary for this***************\n",
+    "\n",
+    "# ----------->SEE CLASS EXERCISE #3 ABOVE---------------------\n",
+    "\n",
+    "#MUST DO:\n",
+    "\"\"\"   \n",
+    "\n",
+    "#[ x ]   1) Takes in input \n",
+    "#[ x ]   2) Stores user input into a dictionary or list \n",
+    "#[ x ]   3) The User can add or delete items \n",
+    "#[ x ]   4) The User can see current shopping list \n",
+    "#[ x ]   5) The program Loops until user 'quits' \n",
+    "#[ x ]   6) Upon quiting the program, print out all items in the user's list \n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -1175,11 +1270,10 @@
     "# Call the shopping cart function to start the program\n",
     "\n",
     "\n",
+    "\"\"\"\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "#############VERSION #1 -------FIX PER C.ASKEW-----------------------------------------------------------------------------\n",
     "\n",
     "\n",
     "\n",
