setting up math module in PYTHON for hw ex#2

--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -1322,7 +1322,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# https://www.w3schools.com/python/python_math.asp\n",
+    "# https://www.google.com/search?q=How+do+you+import+a+Python+math+module+into+Visual+Studio+Code%3F&rlz=1C5CHFA_enUS751US752&oq=How+do+you+import+a+Python+math+module+into+Visual+Studio+Code%3F&aqs=chrome..69i57.3502j0j7&sourceid=chrome&ie=UTF-8\n",
+    "\n",
+    "#DK: SEE PYTHON WEBSITE FOR \"MATH IMPORT\"\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
