--- a/Wednesday_Blank_Thieves_rev.ipynb
+++ b/Wednesday_Blank_Thieves_rev.ipynb
@@ -68,13 +68,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#two ways declare empty dict.\n",
-    "\n",
-    "new_dict = {}\n",
-    "\n",
-    "print(type)(new_dict)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -88,9 +82,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(user[username])"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -112,13 +104,6 @@
     "    'make': 'Chevrolet',\n",
     "    'model': 'Silverado'\n",
     "}\n",
-    "\n",
-    "\n",
-    "print (truck['year'] \n",
-    "#ETc see phone pic--------------\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -230,21 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max: blue\n",
-      "Lilly: brown\n",
-      "Barney: blue\n",
-      "Larney: brown\n",
-      "Ted: purple\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the dict below\n",
     "\n",
@@ -254,24 +227,7 @@
     "    'Barney': 'blue',\n",
     "    'Larney': 'brown',\n",
     "    'Ted': 'purple'\n",
-    "}\n",
-    "\n",
-    "def print_dict_items(dictionary):\n",
-    "    #\n",
-    "    for key, value in dictionary.items():\n",
-    "        #\n",
-    "        print(\"{}: {}\".format(key, value))\n",
-    "\n",
-    "people = {\n",
-    "    'Max': 'blue',\n",
-    "    'Lilly': 'brown',\n",
-    "    'Barney': 'blue',\n",
-    "    'Larney': 'brown',\n",
-    "    'Ted': 'purple'\n",
-    "}\n",
-    "print_dict_items(people)\n",
-    "\n",
-    "#see other solution camera pic-------------------\n"
+    "}\n"
    ]
   },
   {
@@ -283,24 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Barney', 'Larney', 'Lilly', 'Max', 'Ted']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sorts variables in order\n",
     "# sorted(dict.values()) or dict.keys() or dict.items()\n",
-    "\n",
-    "new_people = sorted(people)\n",
-    "\n",
-    "print(new_people)\n"
+    "\n"
    ]
   },
   {
@@ -400,7 +345,7 @@
     "    pass\n",
     "end_time = time.time() - start_time\n",
     "\n",
-    "print('Elapsed time for list: {}'.format(end_time))\n",
+    "print('Elapsed time for dictionary: {}'.format(end_time))\n",
     "\n",
     "\n",
     "# tracking time for dictionary\n",
@@ -438,34 +383,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# write a function that takes in information and stores it in a dictionary:\n",
-    "\n",
-    "#GABE TEST ENVIRONMENT_______________________________________________\n",
-    "\n",
-    "def address_book():\n",
-    "    # write a function that takes in information and stores it in a dictionary\n",
-    "\n",
-    "    book = {}\n",
-    "    # define an empty dictionary to work with\n",
-    "\n",
-    "    while True:\n",
-    "        # create our loop, which asks the user for information until they quit\n",
-    "\n",
-    "        name = input(\"Enter a name (or 'quit' to exit): \")\n",
-    "        # ask for the information, and store it into variables<\n",
-    "\n",
-    "        if name == 'quit':\n",
-    "            break\n",
-    " #check if the user types quit\n",
-    "\n",
-    "        # ask the user for an address and store it in the 'address' variable\n",
-    "        address = input(\"Enter an address: \")\n",
-    "        # store the name and address in the dictionary\n",
-    "        book[name] = address\n",
-    "    # print the dictionary with the names and addresses\n",
-    "    print(book)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -488,13 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set() or {}\n",
-    "\n",
-    "set_1 = set()\n",
-    "\n",
-    "set_2 = {1,2,3,4}\n",
-    "\n",
-    "\n"
+    "# set() or {}\n"
    ]
   },
   {
@@ -506,14 +418,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set.add()\n",
-    "\n",
-    "\n",
-    "\n"
+    "# set.add()\n"
    ]
   },
   {
@@ -549,9 +458,7 @@
    "outputs": [],
    "source": [
     "# Returns a union of two sets, can also use '|' or set.union(set)\n",
-    "# joins all numbers, gets rid of duplicates\n",
-    "\n",
-    "\n"
+    "# joins all numbers, gets rid of duplicates\n"
    ]
   },
   {
@@ -718,7 +625,7 @@
     "3) The User can add or delete items <br>\n",
     "4) The User can see current shopping list <br>\n",
     "5) The program Loops until user 'quits' <br>\n",
-    "6) Upon quitting the program, print out all items in the user's list <br>\n",
+    "6) Upon quiting the program, print out all items in the user's list <br>\n",
     "</p>"
    ]
   },
