near final Ver2 ex. #1 and #2 HW to submit

--- a/Wednesday_complete.ipynb
+++ b/Wednesday_complete.ipynb
@@ -1319,15 +1319,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square footage of the house is 100.0 square feet.\n",
+      "The circumference of the circle is 31.41592653589793 feet.\n"
+     ]
+    }
+   ],
    "source": [
     "# https://www.w3schools.com/python/python_math.asp\n",
     "# https://www.google.com/search?q=How+do+you+import+a+Python+math+module+into+Visual+Studio+Code%3F&rlz=1C5CHFA_enUS751US752&oq=How+do+you+import+a+Python+math+module+into+Visual+Studio+Code%3F&aqs=chrome..69i57.3502j0j7&sourceid=chrome&ie=UTF-8\n",
     "\n",
     "#DK: SEE PYTHON WEBSITE FOR \"MATH IMPORT\"\n",
     "\n",
+    "\n",
+    "#1) \n",
+    "import geometry\n",
+    "\n",
+    "# To Calculate the square footage of a house\n",
+    "length = float(input(\"Enter the length of the house in feet: \"))\n",
+    "width = float(input(\"Enter the width of the house in feet: \"))\n",
+    "area = geometry.square_footage(length, width)\n",
+    "print(f\"The square footage of the house is {area} square feet.\")\n",
+    "#GABE RAN 10 x 10 = 100 sq ft = correct\n",
+    "\n",
+    "\n",
+    "#----------------------------------\n",
+    "\n",
+    "\n",
+    "#2) \n",
+    "# To Calculate the circumference of a circle\n",
+    "radius = float(input(\"Enter the radius of the circle in feet: \"))\n",
+    "circ = geometry.circumference(radius)\n",
+    "print(f\"The circumference of the circle is {circ} feet.\")\n",
+    "#GABE RAN radius of circle = 5 feet ---> circumference below correct\n",
     "\n"
    ]
   }
